# icosahedron

./: .gitignore  Cargo.toml  LICENSE  README.md
lua/: game.lua
lua/modes/: example.lua  workday.lua
lua/workday/: actions.lua  days.lua  dice.lua  upgrades.lua
src/: app.rs  game.rs  lua.rs  main.rs  tracing_integration.rs
